--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <title>Etch-A-Sketch</title>
 </head>
 <body>
-    <div class="container"></div>
+    <div id="container">
+
+    </div>
 
 
-    <script src=""script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
