added the resize logic and the coloring logic.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Etch-A-Sketch</title>
 </head>
 <body>
+    <div class="buttons">
+        <button id="resizer">Change canvas size</button>
+    </div>
+
     <div id="container">
 
     </div>
